fix(warning): fix warnings